<resources>
    <string name="app_name">individual_project</string>
    <string name="button1">Button!</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="user_login">User Login</string>
    <string name="textview">TextView</string>
    <string name="todo1">TODO</string>
    <string name="LOGIN" />
    <string name="button">Button</string>
    <string name="textview1">TextView</string>
    <string name="name">Name</string>
    <string name="textview2">TextView</string>
    <string name="todo3">TODO</string>
    <string name="password">Password</string>
    <string name="button2">Button</string>
    <string name="todo4">TODO</string>
    <string name="textview3">TextView</string>
    <string name="todo5">TODO</string>
    <string name="name1">Name</string>
    <string name="password1">Password</string>
    <string name="button3">Button</string>
    <string name="todo6">TODO</string>
    <string name="textview4">TextView</string>
    <string name="name2">Name</string>
    <string name="name3">Name</string>
    <string name="button4">Button</string>
    <string name="textview5">TextView</string>
    <string name="todo7">TODO</string>
    <string name="name4">Name</string>
    <string name="name5">Name</string>
    <string name="button5">Button</string>
    <string name="todo8">TODO</string>
    <string name="button6">Button</string>
    <string name="button7">Button</string>
    <string name="button8">Button</string>
    <string name="todo9">TODO</string>
    <string name="button9">Button</string>
    <string name="todo10">TODO</string>
    <string name="textview6">TextView</string>
    <string name="user_login_text">User Login</string>
</resources>
