<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_signin">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401"
        tools:text="USER SIGN IN" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/waste_management_concept_segregation_separation_garbage_cans_sorting_recycling_disposal_refuse_bin_vector_illustration"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-121dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo5" />


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/earth_cleaning_planet_natural_environment__earth__globe__recycling__logo_png_removebg_preview"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="448dp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="307dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name1"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="367dp"
        tools:text="User name"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="436dp"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <Button
        android:id="@+id/button4"
        android:layout_width="157dp"
        android:layout_height="55dp"
        android:text="@string/button3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="531dp"
        tools:text="Sign in"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="41dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/untitled"
        tools:layout_editor_absoluteX="298dp"
        tools:layout_editor_absoluteY="365dp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="52dp"
        android:layout_height="42dp"
        app:srcCompat="@drawable/password_clipart_hd_png__circle_password_icon_vectors__circle_icons__password_icons__password_png_image_for_free_download"
        tools:layout_editor_absoluteX="298dp"
        tools:layout_editor_absoluteY="436dp"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>