<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo6"
        app:srcCompat="@drawable/waste_management_concept_segregation_separation_garbage_cans_sorting_recycling_disposal_refuse_bin_vector_illustration"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="179dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fondo_green____wallpaper_iphone_cute__cartoon_wallpaper__cute_cartoon_wallpapers__templates___"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="636dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="337dp"
        android:layout_height="52dp"
        android:text="@string/button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="410dp"
        tools:text="Pick up Date/Schedule" />

    <Button
        android:id="@+id/button8"
        android:layout_width="337dp"
        android:layout_height="52dp"
        android:text="@string/button8"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="339dp"
        tools:text="Track Garbage Truck" />

    <Button
        android:id="@+id/button9"
        android:layout_width="337dp"
        android:layout_height="52dp"
        android:text="@string/button9"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="548dp"
        tools:text="Special Notification/Alert" />

    <Button
        android:id="@+id/button10"
        android:layout_width="337dp"
        android:layout_height="52dp"
        android:text="@string/button7"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="483dp"
        tools:text="Recycling Information" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="66dp"
        android:layout_height="65dp"
        app:srcCompat="@drawable/thubsup_removebg_preview"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="332dp"
        tools:layout_editor_absoluteY="663dp" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/home_removebg_preview"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="663dp" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/untitled"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="668dp"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>