<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_signup">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/waste_management_concept_segregation_separation_garbage_cans_sorting_recycling_disposal_refuse_bin_vector_illustration"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-136dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo7" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/earth_cleaning_planet_natural_environment__earth__globe__recycling__logo_png_removebg_preview"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="448dp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="89dp"
        android:layout_height="38dp"
        app:srcCompat="@drawable/free_navigate__icon___download_in_glyph_style"
        tools:layout_editor_absoluteX="265dp"
        tools:layout_editor_absoluteY="521dp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/name4"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="362dp"
        tools:text="User Name" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="332dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="418dp"
        tools:text="ID No" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="473dp"
        tools:text="Telephone No" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/name5"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="521dp"
        tools:text="Home Address" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="576dp"
        tools:text="Email" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="262dp"
        tools:text="USER SIGNUP"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="636dp"
        tools:text="SIGNUP"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="36dp"
        android:layout_height="38dp"
        app:srcCompat="@drawable/download_user_profile_icon_for_free"
        tools:layout_editor_absoluteX="311dp"
        tools:layout_editor_absoluteY="343dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo8" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="40dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/account__user__interface__profile_icon___free_download"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="369dp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="94dp"
        android:layout_height="41dp"
        app:srcCompat="@drawable/______________png___________pngtree"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="410dp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="46dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/glyphs_silhouette_png_images__calling_telephone_glyph_icon_vector__telephone_icons__calling__call_png_image_for_free_download"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="469dp" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="62dp"
        android:layout_height="34dp"
        app:srcCompat="@drawable/ic_nes_de_email_en_t_l_chargement_gratuit"
        tools:layout_editor_absoluteX="271dp"
        tools:layout_editor_absoluteY="583dp"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>